# qa-assistant

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml  问答助手开发.md
config/: .env.template  __init__.py  settings.py
docs/: cqaip-mapping.md  tool-interface.md
libs/cleaner/src/cleaner/: __init__.py  chunker.py  hybrid_retriever.py  intent_classifier.py  parser.py  pipeline.py  platform_knowledge.py  qa_augmenter.py  qa_dedup.py  qa_processor.py  reranker.py
libs/crawler/src/crawler/: api_fetcher.py  cli.py  deep_crawler.py  news_crawler.py  sources.py
libs/llm/src/llm/: __init__.py  base.py  factory.py
libs/llm/src/llm/providers/: __init__.py  local_bge.py  local_qwen.py  local_qwen_embedding.py  ollama.py  openai.py
libs/shared/src/shared/: __init__.py  enums.py  exceptions.py  models.py
libs/storage/src/storage/: __init__.py  milvus_store.py  repository.py
scripts/: benchmark_qa.py  build_knowledge_base.py  process_news.py  rebuild_all.py  run_pipeline.py  test_qa.py
tests/: test_questions.json
