[project]
name = "qa-assistant"
version = "0.1.0"
description = "Intelligent QA system with crawlвҶ’cleanвҶ’chunkвҶ’store pipeline"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # еҹәзЎҖ
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "numpy>=1.24",
    # зҲ¬иҷ« & йЎөйқўи§Јжһҗ
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # дёӯж–ҮеҲҶиҜҚ & жЈҖзҙў
    "jieba>=0.42",
    "rank-bm25>=0.2",
    # еҗ‘йҮҸж•°жҚ®еә“
    "pymilvus>=3.0",
    "milvus-lite",
    # LLMпјҲз»ҹдёҖ OpenAI е…је®№ API ж јејҸпјү
    "openai>=1.30",
    # ж–Үжң¬еҲҶеқ—
    "langchain-text-splitters>=0.3",
]

[project.optional-dependencies]
# ејҖеҸ‘е·Ҙе…·
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests", "libs/*/tests"]
pythonpath = [
    "libs/shared/src",
    "libs/crawler/src",
    "libs/cleaner/src",
    "libs/storage/src",
    "libs/llm/src",
    "libs/pipeline/src",
]